move informations partners to referential#show Refs #4331

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -13,7 +13,8 @@ fr:
       submit: "Editer"
     attributes:
       next_reload_at: "NextReloadAt"
-      token: "Token"
+      token: "Tokens"
+      partner: "Partners"
   partners:
     title: "Liste des Partners pour le Referential : "
     create:
