--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,12 @@
-edwig-admin (0.1-1) UNRELEASED; urgency=medium
+edwig-admin (0.1-2) UNRELEASED; urgency=medium
 
   * New upstream release
+  * Fixes database password configuration
+
+ -- Alban Peignier <devs+debian@af83.com>  Wed, 18 Oct 2017 19:14:15 +0200
+
+edwig-admin (0.1-1) UNRELEASED; urgency=medium
+
+   * New upstream release
 
  -- Alban Peignier <devs+debian@af83.com>  Mon, 18 Sep 2017 14:12:01 +0200
