Refs #4979 extend ActiveModel::Translation, updates locales fr/en use human_attribute_name for translate

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,23 +1,50 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
 en:
-  hello: "Hello world"
+  application:
+    title: "Edwig-admin"
+    invite_button: "Invite"
+    logout_button: "Logout"
+  actions:
+      show: "Show"
+      edit: "Edit"
+      delete: "Delete"
+  referentials:
+    title: "Referential "
+    listing: "Referential Lists"
+    informations: "Referential Information"
+    save:
+      title: "Save Referentials"
+      confirm: "Are you sure you want to save the Referentials in the database?"
+      success: "The Referentials have been well saved"
+      error: "Error when saving Referentials: %{error}"
+    create:
+      title: "Create a Referential"
+      submit: "Create"
+    edit:
+      title: "Edit a Referential"
+      submit: "Edit"
+  partners:
+    title: "List of Referential Partners: "
+    informations: "Partner Information"
+    save:
+      title: "Save Partners"
+      confirm: "Are you sure you want to save the Partners in the database?"
+      success: "The Partners have been well saved"
+      error: "Error when saving Partners: %{error}"
+    create:
+      title: "Create a Partner"
+      submit: "Create"
+    edit:
+      title: "Edit a Partner"
+      submit: "Edit"
+  attributes:
+    id: "ID"
+    slug: "Slug"
+    partner: "Partner"
+    partners: "Partners"
+    token: "Tokens"
+    next_reload_at: "Next reload at"
+    partner_status: "Partner status"
+    connector_types: "Connector types"
+    settings: "Settings"
+    operational_status: "Operational status"
+    service_started_at: "Service started at"
