--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -2,44 +2,49 @@ fr:
   application:
     title: "Edwig-admin"
     invite_button: "Inviter"
-    logout_button: "déconnexion"
+    logout_button: "Déconnexion"
+  actions:
+      show: "Voir"
+      edit: "Editer"
+      delete: "Supprimer"
   referentials:
     title: "Referential "
-    listing: "Listes des Referentials"
+    listing: "Listes des Referentiels"
+    informations: "Informations Referentiel"
     save:
-      title: "Sauvegarder les Referentials"
-      confirm: "Etes-vous sûr de vouloir sauvegarder les Referentials dans la base de données ?"
-      success: "Les Referentials ont bien été sauvegardés"
-      error: "Erreur lors de la sauvegarde des Referentials : %{error}"
+      title: "Sauvegarder les Referentiels"
+      confirm: "Etes-vous sûr de vouloir sauvegarder les Referentiels dans la base de données ?"
+      success: "Les Referentiels ont bien été sauvegardés"
+      error: "Erreur lors de la sauvegarde des Referentiels : %{error}"
     create:
-      title: "Créer un Referential"
+      title: "Créer un Referentiel"
       submit: "Créer"
     edit:
-      title: "Editer un Referential"
+      title: "Editer un Referentiel"
       submit: "Editer"
-    attributes:
-      next_reload_at: "NextReloadAt"
-      token: "Tokens"
-      partner: "Partners"
   partners:
-    title: "Liste des Partners pour le Referential : "
+    title: "Liste des Partenaires pour le Referentiel : "
+    informations: "Informations Partenaire"
     save:
-      title: "Sauvegarder les Partners"
-      confirm: "Etes-vous sûr de vouloir sauvegarder les Partners dans la base de données ?"
-      success: "Les Partners ont bien été sauvegardés"
-      error: "Erreur lors de la sauvegarde des Partners : %{error}"
+      title: "Sauvegarder les Partenaires"
+      confirm: "Etes-vous sûr de vouloir sauvegarder les Partenaires dans la base de données ?"
+      success: "Les Partenaires ont bien été sauvegardés"
+      error: "Erreur lors de la sauvegarde des Partenaires : %{error}"
     create:
-      title: "Créer un Partner"
+      title: "Créer un Partenaire"
       submit: "Créer"
     edit:
-      title: "Editer un Partner"
+      title: "Editer un Partenaire"
       submit: "Editer"
-    attributes:
-      partner_status: "PartnerStatus"
-      connector_types: "ConnectorTypes"
-      settings: "Settings"
-      operational_status: "OperationalStatus"
   attributes:
     id: "ID"
     slug: "Slug"
-    partner: "Partner"
+    partner: "Partenaire"
+    partners: "Partenaires"
+    token: "Tokens"
+    next_reload_at: "Prochain rechargement à"
+    partner_status: "Status du Partenaire"
+    connector_types: "Types de connecteurs"
+    settings: "Options"
+    operational_status: "Statut opérationel"
+    service_started_at: "Service a commencé à"
