Refs #4979 better translate, fix visual links table_builder

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -9,7 +9,7 @@ fr:
       delete: "Supprimer"
   referentials:
     title: "Referential "
-    listing: "Listes des Referentiels"
+    listing: "Liste des Referentiels"
     informations: "Informations Referentiel"
     save:
       title: "Sauvegarder les Referentiels"
