--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,7 +14,7 @@ en:
     save:
       title: "Save Referentials"
       confirm: "Are you sure you want to save the Referentials in the database?"
-      success: "The Referentials have been well saved"
+      success: "The Referentials have been saved"
       error: "Error when saving Referentials: %{error}"
     create:
       title: "Create a Referential"
@@ -28,7 +28,7 @@ en:
     save:
       title: "Save Partners"
       confirm: "Are you sure you want to save the Partners in the database?"
-      success: "The Partners have been well saved"
+      success: "The Partners have been saved"
       error: "Error when saving Partners: %{error}"
     create:
       title: "Create a Partner"
