Refs #4979 update locales

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -8,7 +8,7 @@ fr:
       edit: "Editer"
       delete: "Supprimer"
   referentials:
-    title: "Referential "
+    title: "Referentiel "
     listing: "Liste des Referentiels"
     informations: "Informations Referentiel"
     save:
