Create UsersController. Refs #5439

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,6 +1,6 @@
 fr:
   application:
-    title: "Edwig-admin"
+    title: "Edwig Admin"
     invite_button: "Inviter"
     logout_button: "Déconnexion"
   actions:
