Add english i18n for users. Refs #5439

--- a/config/locales/users.yml
+++ b/config/locales/users.yml
@@ -16,3 +16,12 @@ en:
   users:
     index:
       title: All Users
+      confirm_destroy: "Are you sure to delete this user ?"
+    actions:
+      invite: Invite
+  activerecord:
+    attributes:
+      user:
+        email: Email
+        created_at: "Creation"
+        updated_at: "Update"
