Update i18n french part. Refs #4979

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -7,15 +7,14 @@ fr:
       show: "Voir"
       edit: "Editer"
       delete: "Supprimer"
-  attributes:
-    id: "ID"
-    slug: "Slug"
-    partner: "Partenaire"
-    partners: "Partenaires"
-    token: "Tokens"
-    next_reload_at: "Prochain rechargement à"
-    partner_status: "Status du Partenaire"
-    connector_types: "Types de connecteurs"
-    settings: "Options"
-    operational_status: "Statut opérationel"
-    service_started_at: "Service a commencé à"
+  # attributes:
+  #   id: "ID"
+  #   slug: "Slug"
+  #   partner: "Partenaire"
+  #   partners: "Partenaires"
+  #   token: "Tokens"
+  #   partner_status: "Status du Partenaire"
+  #   connector_types: "Types de connecteurs"
+  #   settings: "Options"
+  #   operational_status: "Statut opérationel"
+  #   service_started_at: "Service a commencé à"
